2004-05-22  Martin Schaffner  <maschaffner@gmx.ch>

        * main/inferno.c: change -udp documentation to d2x behaviour

2004-05-21  Bradley Bell  <btb@icculus.org>

	* include/gr.h: added missing define for menu fullscreen toggle

2004-05-21  Matthew Mueller  <donut@dakotacom.net>

	* arch/dos/joyc.c, arch/linux/joystick.c: use JOY_NUM_AXES instead
	of 4 in joy_(get|set)_cal_vals (d1x r1.3, r1.4)

2004-05-21  Steven Mueller  <diffusor@ugcs.caltech.edu>

	* arch/include/joy.h, arch/linux/joydefs.c, arch/linux/joystick.c,
	arch/linux/include/joystick.h: patch from Steven Mueller for using
	more than 4 joystick devices in linux (d1x r1.3, r1.3, r1.3)

2004-05-21  Victor Rachels  <sekmu@tisiphone.dhs.org>

	* main/fvi.c, main/gameseg.c, main/gameseg.h, main/object.c,
	main/physics.c, main/render.c, main/wall.c: file-line for segfault
	info (d1x r1.3, r1.5, r1.3, r1.4, r1.3, r1.5, r1.2)

	* arch/win32/digi.c: digisound fixes (d1x r1.7)

2004-05-21  Bradley Bell  <btb@icculus.org>

	* main/inferno.c: added -udp documentation from d1x

2004-05-20  Bradley Bell  <btb@icculus.org>

	* VisualC/d2xgl/d2xgl.dsp: don't need texmappers for OpenGL

2004-05-20  David Cleaver  <wraithx@morpheus.net>

	* main/controls.c, main/gamecntl.c, main/kconfig.c,
	main/kconfig.h, main/object.c: death-cam from WraithX (d1x r1.3,
	game.c r1.21, r1.6, r1.4, r1.3)

2004-05-20  Bradley Bell  <btb@icculus.org>

	* main/inferno.c: document -ihaveabrokenmouse

2004-05-20  Matthew Mueller  <donut@dakotacom.net>

	* arch/dos/vesa.c: dos gcc 2.95 asm fixes (d1x r1.2)

2004-05-20  Victor Rachels  <sekmu@tisiphone.dhs.org>

	* arch/dos/init.c, arch/dos/mouse.c: added new arg and printfs for
	mouse driver problems (d1x r1.2, r1.2)

2004-05-20  Matthew Mueller  <donut@dakotacom.net>

	* main/newmenu.c: increased MESSAGEBOX_TEXT_SIZE to fix netgame
	join list score crash (d1x r1.8)

2004-05-20  Victor Rachels  <sekmu@tisiphone.dhs.org>

	* main/fvi.c, main/gameseg.c, main/gameseg.h, main/physics.c: