@@ -1,4 +1,4 @@
-/* $Id: game.c,v 1.28 2004-05-20 07:54:47 btb Exp $ */
+/* $Id: game.c,v 1.29 2004-05-22 06:56:34 btb Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -407,7 +407,7 @@ COPYRIGHT 1993-1999 PARALLAX SOFTWARE CORPORATION.  ALL RIGHTS RESERVED.
 #endif
 
 #ifdef RCS
-char game_rcsid[] = "$Id: game.c,v 1.28 2004-05-20 07:54:47 btb Exp $";
+char game_rcsid[] = "$Id: game.c,v 1.29 2004-05-22 06:56:34 btb Exp $";
 #endif
 
 #ifdef WINDOWS
@@ -2404,12 +2404,11 @@ void show_help()
 //temp function until Matt cleans up game sequencing
 extern void temp_reset_stuff_on_level();
 
+fix Rear_view_leave_time = 0x1000   // how long until we decide key is down (Used to be 0x4000)
+
 //deal with rear view - switch it on, or off, or whatever
 void check_rear_view()
 {
-
-	#define LEAVE_TIME 0x1000		//how long until we decide key is down	(Used to be 0x4000)
-
 	static int leave_mode;
 	static fix entry_time;
 
@@ -2426,8 +2425,15 @@ void check_rear_view()
 		}
 		else {
 			Rear_view = 1;
-			leave_mode = 0;		//means wait for another key
-			entry_time = timer_get_fixed_seconds();
+			if (Rear_view_leave_time <= 0)
+			{
+				leave_mode = 1; // set leave mode on here otherwise we will always have to hold for at least 1 frame to get leave_mode on
+			}
+			else
+			{
+				leave_mode = 0; // means wait for another key
+				entry_time = timer_get_fixed_seconds();
+			}
 			if (Cockpit_mode == CM_FULL_COCKPIT) {
 				Cockpit_mode_save = Cockpit_mode;
 				select_cockpit(CM_REAR_VIEW);
@@ -2439,7 +2445,7 @@ void check_rear_view()
 	else
 		if (Controls.rear_view_down_state) {
 
-			if (leave_mode==0 && (timer_get_fixed_seconds()-entry_time)>LEAVE_TIME)
+			if (leave_mode == 0 && (timer_get_fixed_seconds() - entry_time) > Rear_view_leave_time)
 				leave_mode = 1;
 		}
 		else {
