@@ -1,3 +1,9 @@
+2004-05-21  Matthew Mueller  <donut@dakotacom.net>
+
+	* main/game.c, main/game.h, main/inferno.c: make rear view
+	leave_time variable with -rearviewleavetime argument (d1x r1.25,
+	r1.5, r1.27)
+
 2004-05-22  Martin Schaffner  <maschaffner@gmx.ch>
 
         * main/inferno.c: change -udp documentation to d2x behaviour
